--- a/songbird/.eslintrc
+++ b/songbird/.eslintrc
@@ -17,6 +17,10 @@
     "react/prefer-stateless-function": 0,
     "react/destructuring-assignment": 0,
     "react/self-closing-comp": 0,
+    "react/prop-types": 0,
+    "react/no-array-index-key": 0,
+    "jsx-a11y/media-has-caption": 0,
+    "prefer-default-export": 0,
     "no-param-reassign": [
       "error",
       {
