--- a/songbird/.eslintrc
+++ b/songbird/.eslintrc
@@ -20,7 +20,12 @@
     "react/prop-types": 0,
     "react/no-array-index-key": 0,
     "jsx-a11y/media-has-caption": 0,
-    "prefer-default-export": 0,
+    "import/prefer-default-export": "off",
+    "jsx-a11y/no-noninteractive-element-interactions": 0,
+    "react/jsx-indent": 0,
+    "consistent-return": 0,
+    "no-shadow": 0,
+    "no-console": 0,
     "no-param-reassign": [
       "error",
       {
